<resources>
    <string name="app_name">AndroidTasks</string>
    <string name="profile">Мой профиль</string>
    <string name="last_name">Кучумов</string>
    <string name="first_name">Михаил</string>
    <string name="patronymic">Юрьевич</string>
    <string name="birthdate">Дата рождения</string>
    <string name="profile_photo">Profile photo</string>
    <string name="accept_btn">Применить</string>
    <string name="gender">Пол:</string>
    <string name="second_profile">Профиль №2</string>
    <string name="third_profile">Профиль №3</string>
    <string name="btn_toast_label">Я люблю тосты</string>
    <string name="label_green">Зеленый</string>
    <string name="label_red">Красный</string>
    <string name="label_blue">Голубой</string>
    <string name="label_orange">Оранжевый</string>
    <string name="label_purple">Фиолетовый</string>
    <string name="tv_green_tag">Зелёное яблоко</string>
    <string name="tv_red_tag">Красная клубника</string>
    <string name="tv_blue_tag">Голубое небо</string>
    <string name="tv_orange_tag">Оранжевый закат</string>
    <string name="tv_purple_tag">Фиолетовый брабус</string>
    <string name="et_phone_hint">Номер телефона</string>
    <string name="tv_height_text">Рост:</string>
    <string name="et_password_hint">Пароль</string>
    <string name="cb_football_text">Футбол</string>
    <string name="cb_volleyball_text">Волейбол</string>
    <string name="cb_basketball_text">Баскетбол</string>
    <string name="tv_experience_text">Стаж работы:</string>
    <string name="rb_s_experience_text"><![CDATA[< 1 года]]></string>
    <string name="rb_m_experience_text">1 - 2 года</string>
    <string name="rb_l_experience_text"><![CDATA[> 2 лет]]></string>
    <string name="tv_hobby_text">Хобби:</string>
    <string name="tv_toast_text">Это я</string>
    <string name="et_second_name_hint">Фамилия</string>
    <string name="et_first_name_hint">Имя</string>
    <string name="et_patronymic_hint">Отчество</string>
    <string name="tv_bench_press">Жим лёжа (80кг):</string>
    <string name="tv_city_text">Город:</string>
    <string name="btn_get_location_text">Получить местоположение</string>
    <string name="btn_show_activity_d_text">Фрагменты</string>
    <string name="tv_friends_text">Друзья:</string>
    <string name="friend_item_tv_name_text">Name Template</string>
    <string name="tv_fragment_hobby_text">Хоббихорсинг - тоже спорт!</string>
    <string name="wolf">Волк</string>
    <string name="money">Деньги</string>
    <string name="home">Дом</string>
    <string name="experience">Опыт</string>
    <string name="not_wolf">Работа не волк</string>
    <string name="walk">Значит надо ходить</string>
    <string name="not_work">Лучше не работать</string>
    <string name="not_experience">Опыт без опыта</string>
    <string name="btn_save_text">Сохранить</string>
    <string name="btn_load_text">Загрузить</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="tv_header_text">Activities</string>

    <string-array name="genders">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <string-array name="difficulty">
        <item>Легко</item>
        <item>Средне</item>
        <item>Сложно</item>
    </string-array>

</resources>